--- a/src/components/Topbar/Topbar.module.scss
+++ b/src/components/Topbar/Topbar.module.scss
@@ -1,10 +1,24 @@
-.auth-btn {
+.top-bar-container{
   position: absolute;
   top: 20px;
   right: 20px;
+  width: 100%;
+
+  .top-bar-sign-in-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin: 0 0px 0 50px;
+  
+    .top-bar-sign-in-right {
+      display: flex;
+      justify-content: flex-end;
+      align-items: center;
+    }
+  }
 
   .profile-img {
-    width: 100px;
+    width: 50px;
     border-radius: 50%;
   }
 }
