--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,3 +1,11 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.py-16 {
+  padding-top: 0rem !important;
+}
+
+* {
+  /* padding: 0 30px; */
+}
